# fixed_axis_rotation_project

./: .gitignore  README.md
fixed_axis_rotation/: package.xml  setup.cfg  setup.py
fixed_axis_rotation/config/: fixed_axis_rotation.yaml
fixed_axis_rotation/fixed_axis_rotation/: fixed_axis_keyboard_node.py  fixed_axis_rotation_node.py  robot_kinematics.py  safety.py
fixed_axis_rotation/launch/: fixed_axis_rotation.launch.py
fixed_axis_rotation_interfaces/: CMakeLists.txt  package.xml
fixed_axis_rotation_interfaces/msg/: FixedAxisCommand.msg
