<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>fixed_axis_rotation_interfaces</name>

  <version>0.0.1</version>

  <description>
    ROS 2 custom interfaces for the Franka fixed-axis rotation controller.
  </description>

  <maintainer email="liangchenhu401@gmail.com">
    harry
  </maintainer>

  <license>Apache-2.0</license>

  <!-- 使用 CMake 构建自定义消息接口 -->
  <buildtool_depend>
    ament_cmake
  </buildtool_depend>

  <!-- 生成 Python、C++ 等语言可使用的 ROS 2 消息代码 -->
  <buildtool_depend>
    rosidl_default_generators
  </buildtool_depend>

  <!-- 运行时使用生成后的消息接口 -->
  <exec_depend>
    rosidl_default_runtime
  </exec_depend>

  <!-- 声明这是一个 ROS 2 接口包 -->
  <member_of_group>
    rosidl_interface_packages
  </member_of_group>

  <export>
    <build_type>
      ament_cmake
    </build_type>
  </export>

</package>